ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/BreakStatements/parser_breakTarget5/input.ts.stderr
error: A 'break' statement can only jump to a label of an enclosing statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/BreakStatements/parser_breakTarget5/input.ts:5:7
  |
5 |       break target;
  |       ^^^^^^^^^^^^^

